--- a/src/fedpkg.conf
+++ b/src/fedpkg.conf
@@ -8,3 +8,6 @@ tracbaseurl = https://%(user)s:%(password)s@fedorahosted.org/rel-eng/login/xmlrp
 branchre = f\d$|f\d\d$|el\d$|olpc\d$|master$
 kojiconfig = /etc/koji.conf
 build_client = koji
+
+# Set the following if you want your remote to be named differently
+#remote = origin
